# space_console

./: .gitmodules
firmware-rust/: Cargo.toml  flash.sh
firmware-rust/avr/: Cargo.toml
firmware-rust/avr/src/: hal_timer.rs  input_driver.rs  led_driver.rs  main.rs  serial.rs
firmware-rust/src/: hal_timer.rs  input.rs  lib.rs  main.rs  pixel_buffer.rs  program.rs  program_runner.rs  programs.rs
firmware-rust/src/programs/: simple_program.rs  zero_program.rs
firmware-rust/tests/: runner_tests.rs
firmware/jet_leds/: CMakeCache.txt  CMakeLists.txt  Jet_LEDs.elf  Jet_LEDs.hex  Makefile  build.sh  cmake_install.cmake  compile_commands.json  constants.h  jet_leds.cpp  program_runner.h
firmware/jet_leds/programs/: ColorProgram.cpp  ColorProgram.h  RainProgram.cpp
firmware/jet_leds/src/: constants.h  inputs.cpp  inputs.h  jet_leds.cpp  leds.cpp  leds.h  program_runner.cpp
firmware/jet_leds/src/programs/: Program.h  RainProgram.cpp  RainProgram.h
firmware/sketch_oct04a/: sketch_oct04a.ino
firmware/sketch_oct27b/: sketch_oct27b.ino
hardware/SpaceConsole/: SpaceConsole-cache.lib  SpaceConsole.kicad_pcb  SpaceConsole.kicad_pcb-bak  SpaceConsole.pro  SpaceConsole.sch  SpaceConsole.sch-bak  fp-info-cache  fp-lib-table  sym-lib-table
rpi/docker/: Dockerfile  Dockerfile.bak  build.sh  run.sh
rpi/workspace/devel/: .catkin
rpi/workspace/devel/.private/catkin_tools_prebuild/: _setup_util.py
rpi/workspace/devel/.private/catkin_tools_prebuild/share/catkin_tools_prebuild/cmake/: catkin_tools_prebuildConfig.cmake
rpi/workspace/devel/.private/cpp_test/: .rosinstall  _setup_util.py  local_setup.sh  setup.sh
rpi/workspace/devel/.private/cpp_test/share/cpp_test/cmake/: cpp_testConfig.cmake
rpi/workspace/devel/share/cpp_test/cmake/: cpp_testConfig-version.cmake  cpp_testConfig.cmake
rpi/workspace/logs/cpp_test/: build.cmake.001.log.stderr  build.cmake.002.log.stderr  build.make.003.log.stderr  build.make.006.log.stderr  build.make.009.log.stderr  build.make.012.log.stderr
rpi/workspace/src/cpp_test/: CMakeLists.txt
rpi/workspace/src/cpp_test/src/: talker.cpp
