[package]
name = "firmware-rust"
version = "0.1.0"
authors = ["Tyler Casselman <tylerc230@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

[[bin]]
name = "firmware-rust"
test = false
bench = false

[dependencies]
panic-halt = "0.2.0"
ufmt = "0.1.0"
nb = "0.1.2"
embedded-hal = "0.2.3"
smart-leds = "0.3.0"
ws2812-spi = "0.4.0"
ws2812-timer-delay = { version = "0.3.0", features = ["slow"] }
rotary-encoder-hal = "0.3.0"

[dependencies.void]
version = "1.0.2"
default-features = false

[dependencies.arduino-hal]
git = "https://github.com/rahix/avr-hal"
rev = "f84c0dff774c2292bc932b670955165161ecc7d1"
features = ["arduino-uno"]

# Configure the build for minimal size - AVRs have very little program memory
[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = "s"
